--- a/desktop.html
+++ b/desktop.html
@@ -25,9 +25,9 @@
   <meta property="og:title" content="「Emir」">
   <meta property="og:type" content="website">
   <meta property="og:title" content="$EMIR$">
-  <meta property="og:My portfolio website.">
+  <meta property="og:description" content="My portfolio website.">
   <meta property="og:url" content="https://emir.is-a.dev/">
-  <meta property="og:image" content="../">
+  <meta property="og:image" content="../images/EMIR.IS-A-.DEV.png">
   <meta name="theme-color" content="#5865F2">
 
 <body>
