--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="public">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    
+    <meta property="og:title" content="「Emir」">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="$EMIR$">
+    <meta property="og:description" content="My portfolio website.">
+    <meta property="og:url" content="https://emir.is-a.dev/">
+    <meta property="og:image" content="../images/EMIR.IS-A-.DEV.png">
+    <meta name="theme-color" content="#5865F2">
+
 
         <link rel="preload" href="WOFF/FreeSerif-YO4a.woff" as="font" type="font/woff">
         <link rel="preload" href="WOFF/jackeyfont.woff" as="font" type="font/woff">
